--- a/templates/macros.html
+++ b/templates/macros.html
@@ -1,9 +1,48 @@
-{% macro render_field(field) -%}
-  <div class="mb-3">
-    {{ field.label(class="form-label") }}
-    {{ field(class="form-control") }}
-    {% if field.errors %}
-      <div class="form-text text-danger">{{ field.errors[0] }}</div>
-    {% endif %}
-  </div>
+{% macro render_field(field, help=None, **kwargs) -%}
+  {# determine classes #}
+  {% set base_class = "form-control" %}
+  {% if field.type in ("BooleanField", "RadioField") %}
+    {% set base_class = "form-check-input" %}
+  {% elif field.type in ("SelectField", "SelectMultipleField") %}
+    {% set base_class = "form-select" %}
+  {% endif %}
+
+  {% set invalid = " is-invalid" if field.errors else "" %}
+  {% set classes = (kwargs.pop('class', '') ~ ' ' ~ base_class ~ invalid).strip() %}
+  {% set describedby_id = field.id ~ "-help" %}
+
+  {# Boolean (checkbox) uses different structure #}
+  {% if field.type == "BooleanField" %}
+    <div class="form-check mb-3">
+      {{ field(class=classes, aria_invalid=field.errors and 'true' or 'false', **kwargs) }}
+      {{ field.label(class="form-check-label", for=field.id) }}
+      {% if help %}
+        <div id="{{ describedby_id }}" class="form-text">{{ help }}</div>
+      {% endif %}
+      {% if field.errors %}
+        <div class="invalid-feedback d-block">
+          {% for err in field.errors %}{{ err }}{% if not loop.last %}<br>{% endif %}{% endfor %}
+        </div>
+      {% endif %}
+    </div>
+
+  {% else %}
+    <div class="mb-3">
+      {{ field.label(class="form-label", for=field.id) }}
+      {{ field(
+          class=classes,
+          aria_invalid=field.errors and 'true' or 'false',
+          aria_describedby=help and describedby_id or None,
+          **kwargs
+      ) }}
+      {% if help %}
+        <div id="{{ describedby_id }}" class="form-text">{{ help }}</div>
+      {% endif %}
+      {% if field.errors %}
+        <div class="invalid-feedback d-block">
+          {% for err in field.errors %}{{ err }}{% if not loop.last %}<br>{% endif %}{% endfor %}
+        </div>
+      {% endif %}
+    </div>
+  {% endif %}
 {%- endmacro %}
